; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_process-util.c_pid_is_my_child.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_process-util.c_pid_is_my_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pid_is_my_child(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp sle i32 %6, 1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @get_process_ppid(i32 %10, i32* %4)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %2, align 4
  br label %21

16:                                               ; preds = %9
  %17 = load i32, i32* %4, align 4
  %18 = call i32 (...) @getpid_cached()
  %19 = icmp eq i32 %17, %18
  %20 = zext i1 %19 to i32
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %16, %14, %8
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @get_process_ppid(i32, i32*) #1

declare dso_local i32 @getpid_cached(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
